# typst-to-tex

./: .gitignore  Cargo.toml  GETTING_STARTED.md  README.md  main.typ  main.typ.tex  sub.typ  template.tex  ttt.toml
src/: diagnostics.rs  elems.rs  eval.rs  main.rs  world.rs
submission/: assignment.sty  assignment.typ  main.typ  main.typ.aux  main.typ.bbl  main.typ.bcf  main.typ.blg  main.typ.run.xml  main.typ.tex  project_1_diethelm_benjamin.aux  project_1_diethelm_benjamin.bcf  project_1_diethelm_benjamin.blg  project_1_diethelm_benjamin.fdb_latexmk  project_1_diethelm_benjamin.fls  project_1_diethelm_benjamin.run.xml  project_1_diethelm_benjamin.tex  project_3_diethelm_benjamin.typ  project_3_diethelm_benjamin.typ.aux  project_3_diethelm_benjamin.typ.bbl  project_3_diethelm_benjamin.typ.bcf  project_3_diethelm_benjamin.typ.blg  project_3_diethelm_benjamin.typ.fdb_latexmk  project_3_diethelm_benjamin.typ.fls  project_3_diethelm_benjamin.typ.run.xml  project_3_diethelm_benjamin.typ.tex  sources.bib  template.tex  ttt.toml
submission/01/: 1_4.out  1_5.out  hello_world.cpp  job_1_4.sh  job_1_5.sh
submission/02/: 2_3_7763.out  2_3_7H12.out  Memory_7763.txt  Memory_7H12.txt  job_2_1.sh  job_2_2.sh  job_2_3.sh  job_2_4.sh  roofline_plot.py
submission/04/: L1L2_opt.sh  L2_opt.sh  L3_opt.sh  flag_compare.sh
submission/code/04/: dgemm-blocked.c  dgemm-jki.c
submission/code/04/plots/block/: plot_l1l2.py  plot_l2.py  plot_l3.py
submission/code/04/plots/flag/: flags.py
submission/code/04/plots/steps/: dgemm-opt0.c  dgemm-opt1.c  dgemm-opt2.c  dgemm-opt3.c  dgemm-opt4.c  dgemm-opt5.c  dgemm-opt6.c  dgemm-opt7.c  run_optimization_study.sh  steps.py
submission/code/04/plots/variants/: Makefile  benchmark.c  dgemm-blocked.c  run_matrixmult.sh  variants.py
submission/plots/: strong_scaling.err  strong_scaling.out
