[package]
name = "ttt"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.9"
clap = "4.5.31"
color-eyre = "0.6.3"
indoc = "2.0.6"
itertools = "0.14.0"
rand = "0.9.0"
regex = "1.11.1"
tinymist-project = {version = "0.13.2", features=["system", "no-content-hint", "lsp", "fonts"]}
typst = "0.13.1"
typst-eval = "0.13.1"
typst-layout = "0.13.1"
typst-library = "0.13.1"
typst-pdf = "0.13.1"

[patch.crates-io]
# typst = {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-eval = {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-layout = {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-pdf = {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-cli =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-eval =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-html =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-ide =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-kit =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-layout =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-library =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-macros =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-pdf =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-realize =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-render =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-svg =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-syntax =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-timing =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-utils =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
