[package]
name = "ttt"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.9"
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
facet = { version = "0.32.2", features = ["camino"] }
facet-macros = "0.32.2"
facet-toml = "0.32.2"
indoc = "2.0.6"
itertools = "0.14.0"
rand = "0.9.0"
regex = "1.11.1"
time = "0.3.44"
typst = "0.14.2"
typst-eval = "0.14.2"
typst-layout = "0.14.2"
typst-library = "0.14.2"
typst-pdf = "0.14.2"
typst-kit = { version = "0.14.2", features = ["embed-fonts"] }
zune-inflate = { version = "0.2", default-features = false, features = [
  "gzip",
  "std",
] }
tar = "0.4"
ureq = "2.9"
ttf-parser = "0.25"

[patch.crates-io]
# typst = {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-eval = {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-layout = {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-pdf = {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-cli =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-eval =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-html =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-ide =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-kit =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-layout =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-library =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-macros =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-pdf =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-realize =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-render =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-svg =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-syntax =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-timing =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
# typst-utils =  {git = "https://github.com/TheZoq2/typst.git", branch = "state_pub"}
